# libcoroxx

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: coro.hpp
include/coro/: coro_inner.hpp  loop.hpp  queue.hpp  rawqueue.hpp  rawtask.hpp  task.hpp
src/: coro.cpp  loop.cpp  rawqueue.cpp  rawtask.cpp
tests/: CMakeLists.txt  basic.cpp  callsoon.cpp  iteratortest.cpp  queue.cpp  tasktest.cpp  void_ret_test.cpp
